[bug 824773] Fix overscroll on iOS

--- a/media/less/mobile/main.less
+++ b/media/less/mobile/main.less
@@ -33,7 +33,6 @@ body {
     color: #fff;
     left: 0;
     overflow: auto;
-    -webkit-overflow-scrolling: touch;
     position: absolute;
     top: 0;
     width: 270px;
@@ -318,7 +317,6 @@ textarea {
     font-size: 24px;
     left: 0;
     overflow: auto;
-    -webkit-overflow-scrolling: touch;
     position: absolute;
     right: 0;
     top: 51px;
@@ -470,6 +468,10 @@ textarea {
   width: 12px;
 }
 
+.scrollable {
+  -webkit-overflow-scrolling: touch;
+}
+
 .select-box {
   background: #e7e7e7;
   border: 1px solid rgba(0, 0, 0, 0.35);
@@ -576,7 +578,6 @@ textarea {
   .wrapper {
     bottom: 0;
     overflow: auto;
-    -webkit-overflow-scrolling: touch;
     left: 0;
     position: absolute;
     right: 0;
